Bug 155134 - Regression error: exporting files to DOCX results in freezing.
Summary: Regression error: exporting files to DOCX results in freezing.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Track-Changes Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-05-03 11:51 UTC by NISZ LibreOffice Team
Modified: 2023-05-25 06:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (49.47 KB, application/vnd.sun.xml.writer)
2023-05-03 11:52 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-03 11:51:19 UTC
Description:
Fixing this bug caused regression: 150824
Exporting multiple files to DOCX causes freezing.

Steps to Reproduce:
1:Open the attachment.
2:Save to DOCX.

Alternative:
wget https://bz.apache.org/ooo/attachment.cgi?id=15979 -O ~/ooo30436-1.sxw
./instdir/program/office --headless --convert-to docx ~/ooo30436-1.sxw

Actual Results:
-

Expected Results:
-


Reproducible: Always


User Profile Reset: No

Additional Info:
-
Comment 1 NISZ LibreOffice Team 2023-05-03 11:52:15 UTC
Created attachment 187068 [details]
Sample file
Comment 2 László Németh 2023-05-03 12:09:50 UTC
Bibisected by Caolán McNamara (https://gerrit.libreoffice.org/c/core/+/150967/comments/04679229_530f2a34):

commit dd5e5f3fab4b8f736baeda0f706c77a4ea9b6804	[log]
author	László Németh <nemeth@numbertext.org>	Tue Apr 25 11:04:05 2023 +0200
committer	László Németh <nemeth@numbertext.org>	Tue Apr 25 14:27:57 2023 +0200
tree 12e3ce9006148406744aa249021e399fe735d63b
parent 6252959192c07973af698ce30fa67b1a29e4871e [diff]
tdf#150824 sw DOCX: fix export of new tracked tables
Comment 3 Commit Notification 2023-05-03 12:11:49 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/966e955ea09772ad1e3363f1813e5b26bfa41671

tdf#155134 DOCX export: fix crash with old table format

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2023-05-25 06:57:11 UTC
Verified in:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 73a82b425b4dc02ef4ad3946b71c067a6411045c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded