tdf#155134 DOCX export: fix crash with old table format

Handle missing start nodes of boxes in old table format.

Regression from commit dd5e5f3fab4b8f736baeda0f706c77a4ea9b6804
"tdf#150824 sw DOCX: fix export of new tracked tables".

Change-Id: Ib10afa52351c683c3d3407aff567d6a8e2c76306
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151318
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>